RESOLVED FIXED211403
WKWebView.title should be safe browsing warning's title during a safe browsing warning
https://bugs.webkit.org/show_bug.cgi?id=211403
Summary WKWebView.title should be safe browsing warning's title during a safe browsin...
Alex Christensen
Reported 2020-05-04 15:02:26 PDT
WKWebView.title should be safe browsing warning's title during a safe browsing warning
Attachments
Patch (3.45 KB, patch)
2020-05-04 15:03 PDT, Alex Christensen
no flags
Patch (6.79 KB, patch)
2020-05-07 14:17 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2020-05-04 15:03:27 PDT
Alex Christensen
Comment 2 2020-05-04 15:03:30 PDT
Tim Horton
Comment 3 2020-05-04 23:37:01 PDT
Comment on attachment 398422 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=398422&action=review > Source/WebKit/UIProcess/WebPageProxy.cpp:5213 > + m_pageLoadState.setTitle(transaction, oldTitle); I don't really know how this all works, is there a guarantee that neither parsing nor JS have changed the title in the meantime, that you'll lose/stomp here?
Alex Christensen
Comment 4 2020-05-05 09:11:19 PDT
There is no such guarantee. This is just a best attempt at restoring what was there. The title is from a non-malicious page.
Alex Christensen
Comment 5 2020-05-07 14:17:53 PDT
EWS
Comment 6 2020-05-08 10:13:41 PDT
Committed r261390: <https://trac.webkit.org/changeset/261390> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398796 [details].
Note You need to log in before you can comment on or make changes to this bug.